使用jtreg执行测试用例。